--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="header_wrap">
         <h1>
           <a href="https://www.daily-funding.com:443">
-            <img src="img/img_main_logo.png" alt="홈으로" width="200px" />
+            <img src="img/img_main_logo.png" alt="Dailyfunding" width="200px" />
           </a>
         </h1>
       </div>
@@ -60,8 +60,7 @@
                 class="google-btn"
               >
                 <div class="google-btn__content">
-                  <i class="fas fa-play"></i>
-                  <span class="google-btn_font">Google Play</span>
+                  <img src="img/bt_googleplay.svg" alt="Google play" />
                 </div>
               </a>
               <a
@@ -69,8 +68,7 @@
                 class="apple-btn"
               >
                 <div class="apple-btn__content">
-                  <i class="fab fa-apple"></i>
-                  <span class="apple-btn_font">App Store</span>
+                  <img src="img/bt_appstore.png" alt="App store" />
                 </div>
               </a>
             </div>
