--- a/index.html
+++ b/index.html
@@ -75,6 +75,122 @@
           </div>
         </div>
       </section>
+      <section id="section_2">
+        <div class="inner">
+          <div class="graphBox">
+            <div class="graphBox__left">
+              <div class="left-column column_1">
+                <h2>
+                  일상이 특별해지는<br />
+                  금융입니다
+                </h2>
+              </div>
+              <div class="left-column column_2">
+                <p>
+                  누적 취급액
+                  <span>5,626억원</span>
+                </p>
+                <p>
+                  누적 이자 수익
+                  <span>176억원</span>
+                </p>
+                <p>5명 중 4명 재투자</p>
+                <p>
+                  연체율
+                  <span>0.00%</span>
+                </p>
+                <p class="small_txt">2020.09.28기준</p>
+              </div>
+            </div>
+            <div class="graphBox__right">
+              <div class="right_box">
+                <div class="speech_bubble lg_bubble">
+                  <div class="speech_bubble small-bubble"></div>
+                  <p class="box_1">
+                    <span>
+                      <select class="dropdown_1">
+                        <option value="0">투자금액</option>
+                        <option value="100000">10만원</option>
+                        <option value="1000000">100만원</option>
+                        <option value="2000000">200만원</option>
+                        <option value="5000000" selected>500만원</option>
+                        <option value="30000000">3,000만원</option>
+                      </select>
+                    </span>
+                    <span>
+                      <select class="dropdown_2">
+                        <option value="0">투자기간</option>
+                        <option value="3" selected>3개월</option>
+                        <option value="6">6개월</option>
+                        <option value="9">9개월</option>
+                        <option value="12">12개월</option>
+                      </select>
+                      <span>투자시</span>
+                    </span>
+                  </p>
+                  <p class="box_2">
+                    예상 총 수익금
+                    <span class="mblock">
+                      <span class="m_amount">200,000</span>
+                      원
+                    </span>
+                  </p>
+                </div>
+                <p class="small_txt">
+                  데일리펀딩 최고 투자 수익률 연 16% 기준 (세전)
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="section_3">
+        <div class="inner">
+          <div class="graphBox">
+            <div class="graphBox__left">
+              <div class="left-column column_1">
+                <h2>
+                  투자에 취향을<br />
+                  담았습니다
+                </h2>
+              </div>
+              <div class="left-column column_2">
+                <p>
+                  자동분산투자 누적건수<br />
+                  <span>190,550건</span>
+                </p>
+                <p>
+                  자동분산투자 누적금액<br />
+                  <span>1,872억원</span>
+                </p>
+              </div>
+            </div>
+            <div class="graphBox__right">
+              <div class="graph_wrap">
+                <div class="txt_wrap wrap_1">
+                  <div class="btn_txt">수익률</div>
+                </div>
+                <div class="txt_wrap wrap_2">
+                  <div class="btn_txt_1">투자기간</div>
+                  <div class="btn_txt_2">리스크</div>
+                </div>
+                <div class="graph_wrap__types types-img">
+                  <a class="img_graph_stable"></a>
+                  <a class="img_graph_balance"></a>
+                  <a class="img_graph_profit"></a>
+                </div>
+              </div>
+              <div class="graph_types">
+                <a class="bt_1_stabletype">안정형</a>
+                <a class="bt_2_balancetype">균형투자형</a>
+                <a class="bt_3_profittype">수익형</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="section_3-types.js"></script>
 </html>
