--- a/index.html
+++ b/index.html
@@ -189,8 +189,63 @@
           </div>
         </div>
       </section>
+      <section id="section_4">
+        <div class="inner">
+          <div class="graphBox">
+            <div class="graphBox__left">
+              <div class="left-column column_1">
+                <h2>
+                  내일의 부담을<br />
+                  덜어드립니다
+                </h2>
+              </div>
+              <div class="left-column column_2">
+                <ul>
+                  <li class="li_1">
+                    <a>
+                      데일리론
+                      <img src="img/ic_Help.svg" alt="데일리론" class="img_ic"/>
+                    </a>
+                    <a class="img_help"></a>
+                    <span class="bar bar_1"></span>
+                    <span class="val val_1">8.5% ~</span>
+                  </li>
+                  <li class="li_2">
+                    <a>카드론</a>
+                    <span class="bar bar_2"></span>
+                    <span class="val val_2">14.7%</span>
+                  </li>
+                  <li class="li_3">
+                    <a>대부업체</a>
+                    <span class="bar bar_3"></span>
+                    <span class="val val_3">24.0%</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="graphBox__right">
+              <div class="right_box">
+                <div class="speech_bubble lg_bubble">
+                  <div class="speech_bubble small-bubble"></div>
+                  <p class="box_1">
+                    데일리론 이용 고객님의
+                  </p>
+                  <p class="box_2">
+                    누적 이자 절감액
+                    <span>90억 3,960만원</span>
+                  </p>
+                </div>
+                <p class="small_txt">
+                  대부업체 평균 이율 비교 기준
+                </p>
+              </div>
+            </div>
+        </div>
+      </section>
     </div>
   </body>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="section_3-types.js"></script>
+  <script src="js/speech_bubble.js"></script>
+  <script src="js/section_3-types.js"></script>
+  <script src="js/section_4.js"></script>
 </html>
