--- a/index.html
+++ b/index.html
@@ -242,6 +242,51 @@
             </div>
         </div>
       </section>
+      <section id="section_5">
+        <div class="inner">
+          <div class="graphBox">
+            <div class="graphBox__left">
+              <div class="left-column column_1">
+                <h2>
+                  데일리펀딩과<br />
+                  금융을 혁신합니다
+                </h2>
+              </div>
+            </div>
+            <div class="graphBox__right">
+              <div class="right_box">
+                <table>
+                  <tbody>
+                    <tr>
+                      <td><img src="img/img_lpoint.png" alt="L.point"></td>
+                      <td><img src="img/img_toss.png" alt="toss"></td>
+                      <td><img src="img/img_payco.png" alt="PAYCO"></td>
+                      <td><img src="img/img_kakaopay.png" alt="kakaopay"></td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/img_yonsei.png" alt="yonsei"></td>
+                      <td><img src="img/img_wmp.png" alt="위메프"></td>
+                      <td><img src="img/img_hyundai.png" alt="현대해상"></td>
+                      <td><img src="img/img_finda.png" alt="FINDA"></td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/img_finnq.png" alt="Finnq"></td>
+                      <td><img src="img/img_tickle.png" alt="tickle"></td>
+                      <td><img style="width: 7rem; height: auto;" src="img/img_interpark.png" alt="INTERPARK"></td>
+                      <td><img src="img/img_qraft.png" alt="QRAFT"></td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/img_oligo.png" alt="올리GO"></td>
+                      <td><img src="img/img_modu.png" alt="MODUSIGN"></td>
+                      <td><img src="img/img_petdoc.png" alt="Petdoc"></td>
+                      <td><img src="img/img_finmart.png" alt="FINMART"></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+        </div>
+      </section>
     </div>
   </body>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
