--- a/index.html
+++ b/index.html
@@ -287,10 +287,62 @@
             </div>
         </div>
       </section>
+      <section id="section_6">
+        <div class="inner">
+          <div class="graphBox">
+            <div class="graphBox__left">
+              <div class="left-column column_1">
+                <h2>
+                  지속가능한 금융,<br />
+                  데일리펀딩입니다
+                </h2>
+              </div>
+              <div class="left-column column_2">
+                <a href="https://www.daily-funding.com/bbs/faq.php?fm_id=4">
+                  <span>자세히 보기</span>
+                  <img src="img/bt_arrow_right.svg" alt="bt_arrow_right">
+                </a>
+              </div>
+            </div>
+            <div class="graphBox__right">
+              <div class="question_wrap">
+                <div class="wrap wrap_1">
+                  <div class="qw">
+                    <span class="qf_1">최소 투자 금액은 어떻게 되나요?</span>
+                    <div class="btn btn_1"></div>
+                  </div>                  
+                  <div class="question_txt question_txt_1">
+                    1만원부터 투자하실 수 있습니다.
+                  </div>
+                </div>
+                <div class="wrap wrap_2">
+                  <div class="qw">
+                    <span class="qf_2">수익금(이자)은 언제 지급되나요?</span>
+                    <div class="btn btn_2"></div>
+                  </div>
+                  <div class="question_txt question_txt_2">
+                    대출실행일로부터 매 1개월 단위로 수익금이 지급됩니다.
+                  </div>
+                </div>
+                <div class="wrap wrap_3">
+                  <div class="qw">
+                    <span class="qf_3">P2P금융이란 무엇인가요?</span>
+                    <div class="btn btn_3"></div>
+                  </div>
+                  <div class="question_txt question_txt_3">
+                    투자자와 대출자를 연결해 대출자에게는 합리적인 금리로 자금을 제공해주고, 투자자에게는 시중 금융상품 대비 높은 수익률을 제공하는 금융형태입니다.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="js/speech_bubble.js"></script>
   <script src="js/section_3-types.js"></script>
   <script src="js/section_4.js"></script>
+  <script src="js/section_6.js"></script>
 </html>
