--- a/index.html
+++ b/index.html
@@ -338,7 +338,58 @@
           </div>
         </div>
       </section>
+      <section id="section_7">
+        <div class="inner">
+          <div class="graphBox">
+            <div class="box_txt">
+              지금, 경험해보세요!
+              <img src="img/ic_hand.png" alt="ic_hand">
+            </div>
+            <div class="btn_wrap">
+              <a href="https://www.daily-funding.com/">
+                <img src="img/bt_hompage.png" alt="homepage">
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
+    <footer>
+      <div class="inner">
+        <div class="box">
+          <div class="btn_wrap">
+            <a href="https://blog.naver.com/daily-funding">blog</a>
+            <a href="https://www.instagram.com/dailyfunding/">instagram</a>
+            <a href="https://brunch.co.kr/@dailian">brunch</a>
+            <a href="https://www.youtube.com/channel/UC2gMYMn0YJUDmtm0v3wfFmA">youtube</a>
+          </div>
+          <div class="info">
+            02-562-9666 (월-금 | 오전9시30분~오후5시)
+          </div>
+          <div class="notice">
+            데일리펀딩은 투자원금과 수익금을 보장하지 않으며, 투자손실에 대한 책임은 모두 투자자에게 있습니다.
+          </div>
+          <div class="info_bot">
+            <ul>
+              <li>
+                <a href="https://www.daily-funding.com/bbs/content.php?co_id=provision">서비스 이용약관</a>
+              </li>
+              <li class="line">|</li>
+              <li>
+                <a href="https://www.daily-funding.com/bbs/content.php?co_id=privacy" style="color: #ffffff;">개인정보 처리방침</a>
+              </li>
+              <li class="line">|</li>
+              <li>
+                <a href="https://www.daily-funding.com/bbs/content.php?co_id=provision2">투자 이용약관</a>
+              </li>
+            </ul>
+            <div class="copy_txt">
+              Copyright©데일리펀딩. All Rights Reserved
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="js/speech_bubble.js"></script>
