section_1_mobile layout, animation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <div class="header_wrap">
         <h1>
           <a href="https://www.daily-funding.com:443">
-            <img src="img/img_main_logo.png" alt="Dailyfunding" width="200px" />
+            <img src="img/img_main_logo.png" alt="Dailyfunding" width="200px" class="logo_1" />
+            <img src="img/img_main_log_2.png" alt="Dailyfunding" width="200px" class="logo_2" style="display: none;">
           </a>
         </h1>
       </div>
@@ -75,6 +76,35 @@
           </div>
         </div>
       </section>
+      <div id="section_1_mobile">
+        <div class="bg_text">
+          <div class="txt_wrap_2">
+            <div class="txt_box leaf_box">
+              <img src="img/img_leaf_1.png" alt="img_leaf_1" class="img_leaf" />
+              <div class="txt_box-column">
+                <div class="txt_box__1">
+                  2018-2019 고객 만족 브랜드 대상 수상
+                </div>
+              </div>
+              <img src="img/img_leaf_2.png" alt="img_leaf_2" class="img_leaf" />
+            </div>
+          </div>
+          <div class="txt_wrap_1">
+            <div class="txt_1">투명한 종합 금융 플랫폼</div>
+            <div class="txt_2">데일리펀딩</div>
+          </div>
+          <div class="img_wrap">
+            <img src="img/phone_large.png" alt="1024" class="wrap_1">
+            <img src="img/phone_mask_large.png" alt="639" class="wrap_2">
+          </div>
+          <div class="btn_wrap">
+            <a href="https://play.google.com/store/apps/details?id=com.dailyfunding.web">
+              <img src="img/bt_download.svg" alt="데일리펀딩 앱 다운로드" class="btn_download_1">
+              <img src="img/bt_download_bottom.png" alt="데일리펀딩 앱 다운로드" class="btn_download_2">
+            </a>
+          </div>
+        </div>
+      </div>
       <section id="section_2">
         <div class="inner">
           <div class="graphBox">
@@ -392,6 +422,7 @@
     </footer>
   </body>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="js/scroll.js"></script>
   <script src="js/speech_bubble.js"></script>
   <script src="js/section_3-types.js"></script>
   <script src="js/section_4.js"></script>
