section_2_mobile layout

--- a/index.html
+++ b/index.html
@@ -174,6 +174,75 @@
           </div>
         </div>
       </section>
+      <section id="section_2_mobile">
+        <div class="inner">
+          <div class="graphBox">
+            <div class="graphBox__left">
+              <div class="left-column column_1">
+                <h2>
+                  일상이 특별해지는<br />
+                  금융입니다
+                </h2>
+              </div>
+              <div class="left-column column_2">
+                <p>
+                  누적 취급액
+                  <span>5,626억원</span>
+                </p>
+                <p>
+                  누적 이자 수익
+                  <span>176억원</span>
+                </p>
+                <p>5명 중 4명 재투자</p>
+                <p>
+                  연체율
+                  <span>0.00%</span>
+                </p>
+              </div>
+            </div>
+            <div class="graphBox__right">
+              <div class="right_box">
+                <div class="speech_bubble lg_bubble">
+                  <div class="speech_bubble small-bubble"></div>
+                  <p class="box_1">
+                    <span>
+                      <select class="dropdown_1">
+                        <option value="0">투자금액</option>
+                        <option value="100000">10만원</option>
+                        <option value="1000000">100만원</option>
+                        <option value="2000000">200만원</option>
+                        <option value="5000000" selected>500만원</option>
+                        <option value="30000000">3,000만원</option>
+                      </select>
+                    </span>
+                    <span>
+                      <select class="dropdown_2">
+                        <option value="0">투자기간</option>
+                        <option value="3" selected>3개월</option>
+                        <option value="6">6개월</option>
+                        <option value="9">9개월</option>
+                        <option value="12">12개월</option>
+                      </select>
+                      <span>투자시</span>
+                    </span>
+                  </p>
+                  <p class="box_2">
+                    예상 총 수익금
+                    <span class="mblock">
+                      <span class="m_amount">200,000</span>
+                      원
+                    </span>
+                  </p>
+                </div>
+                <p class="small_txt">
+                  데일리펀딩 최고 투자 수익률 연 16% 기준 (세전)
+                </p>
+              </div>
+            </div>
+            <p class="small_txt">2020.09.28기준</p>
+          </div>
+        </div>
+      </section>
       <section id="section_3">
         <div class="inner">
           <div class="graphBox">
