section_5(mobile) layout

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="graphBox__right">
               <div class="right_box">
                 <table>
-                  <tbody>
+                  <tbody class="pc_table">
                     <tr>
                       <td><img src="img/img_lpoint.png" alt="L.point"></td>
                       <td><img src="img/img_toss.png" alt="toss"></td>
@@ -371,12 +371,46 @@
                     <tr>
                       <td><img src="img/img_finnq.png" alt="Finnq"></td>
                       <td><img src="img/img_tickle.png" alt="tickle"></td>
-                      <td><img style="width: 7rem; height: auto;" src="img/img_interpark.png" alt="INTERPARK"></td>
+                      <td><img style="padding: 7px 0 0 1px;" src="img/img_interpark.png" alt="INTERPARK"></td>
                       <td><img src="img/img_qraft.png" alt="QRAFT"></td>
                     </tr>
                     <tr>
                       <td><img src="img/img_oligo.png" alt="올리GO"></td>
                       <td><img src="img/img_modu.png" alt="MODUSIGN"></td>
+                      <td><img src="img/img_petdoc.png" alt="Petdoc"></td>
+                      <td><img src="img/img_finmart.png" alt="FINMART"></td>
+                    </tr>
+                  </tbody>
+                  <tbody class="mobile_table">
+                    <tr>
+                      <td><img src="img/img_lpoint.png" alt="L.point"></td>
+                      <td><img src="img/img_toss.png" alt="toss"></td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/img_payco.png" alt="PAYCO"></td>
+                      <td><img src="img/img_kakaopay.png" alt="kakaopay"></td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/img_yonsei.png" alt="yonsei"></td>
+                      <td><img src="img/img_wmp.png" alt="위메프"></td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/img_hyundai.png" alt="현대해상"></td>
+                      <td><img src="img/img_finda.png" alt="FINDA"></td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/img_finnq.png" alt="Finnq"></td>
+                      <td><img src="img/img_tickle.png" alt="tickle"></td>
+                    </tr>
+                    <tr>
+                      <td><img style="padding: 7px 0 0 1px;" src="img/img_interpark.png" alt="INTERPARK"></td>
+                      <td><img src="img/img_qraft.png" alt="QRAFT"></td>
+                    </tr>
+                    <tr>
+                      <td><img src="img/img_oligo.png" alt="올리GO"></td>
+                      <td><img src="img/img_modu.png" alt="MODUSIGN"></td>
+                    </tr>
+                    <tr>
                       <td><img src="img/img_petdoc.png" alt="Petdoc"></td>
                       <td><img src="img/img_finmart.png" alt="FINMART"></td>
                     </tr>
