speech_bubble.js update

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   <div class="speech_bubble small-bubble"></div>
                   <p class="box_1">
                     <span>
-                      <select class="dropdown_1">
+                      <select class="mobile_drop_1">
                         <option value="0">투자금액</option>
                         <option value="100000">10만원</option>
                         <option value="1000000">100만원</option>
@@ -216,7 +216,7 @@
                       </select>
                     </span>
                     <span>
-                      <select class="dropdown_2">
+                      <select class="mobile_drop_2">
                         <option value="0">투자기간</option>
                         <option value="3" selected>3개월</option>
                         <option value="6">6개월</option>
@@ -229,7 +229,7 @@
                   <p class="box_2">
                     예상 총 수익금
                     <span class="mblock">
-                      <span class="m_amount">200,000</span>
+                      <span class="mobile_amount">200,000</span>
                       원
                     </span>
                   </p>
@@ -280,6 +280,11 @@
                 </div>
               </div>
               <div class="graph_types">
+                <a class="bt_1_stabletype">안정형</a>
+                <a class="bt_2_balancetype">균형투자형</a>
+                <a class="bt_3_profittype">수익형</a>
+              </div>
+              <div class="mobile_graph_types">
                 <a class="bt_1_stabletype">안정형</a>
                 <a class="bt_2_balancetype">균형투자형</a>
                 <a class="bt_3_profittype">수익형</a>
@@ -500,7 +505,8 @@
             02-562-9666 (월-금 | 오전9시30분~오후5시)
           </div>
           <div class="notice">
-            데일리펀딩은 투자원금과 수익금을 보장하지 않으며, 투자손실에 대한 책임은 모두 투자자에게 있습니다.
+            데일리펀딩은 투자원금과 수익금을 보장하지 않으며, 
+            투자손실에 대한 책임은 모두 투자자에게 있습니다.
           </div>
           <div class="info_bot">
             <ul>
