mobile layout (425px)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -459,7 +459,8 @@
                     <div class="btn btn_2"></div>
                   </div>
                   <div class="question_txt question_txt_2">
-                    대출실행일로부터 매 1개월 단위로 수익금이 지급됩니다.
+                    대출실행일로부터 매 1개월 단위로
+                    수익금이 지급됩니다.
                   </div>
                 </div>
                 <div class="wrap wrap_3">
@@ -468,7 +469,8 @@
                     <div class="btn btn_3"></div>
                   </div>
                   <div class="question_txt question_txt_3">
-                    투자자와 대출자를 연결해 대출자에게는 합리적인 금리로 자금을 제공해주고, 투자자에게는 시중 금융상품 대비 높은 수익률을 제공하는 금융형태입니다.
+                    투자자와 대출자를 연결해 대출자에게는 합리적인 금리로 자금을 제공해주고,
+                    투자자에게는 시중 금융상품 대비 높은 수익률을 제공하는 금융형태입니다.
                   </div>
                 </div>
               </div>
